--- a/_posts/2021-06-27-ky-tuc-xa-110-e2.md
+++ b/_posts/2021-06-27-ky-tuc-xa-110-e2.md
@@ -9,73 +9,128 @@ tags: [bvmd]
 comments: true
 ---
 Ở Y Hà Nội, đa số các tân sinh viên đều có số má nơi trường cấp 3 hoặc tiếng tăm phạm vi cấp huyện, tỉnh, trung ương về mặt học hành, thành tích. Hùng béo phòng tôi xuất thân từ Hà Tĩnh – cùng quê với tôi, Hoàng, Vượng. Mặc dù nó học trường làng nhưng rất tích cực năng nổ giao lưu, kết bạn, tham gia xây dựng các tình yêu giải toán luyện thi qua internet. Năm học đầu tiên, vốn kiến thức toán – lý – hóa – sinh – văn - sử - địa - anh của hầu hết các con giời vẫn nguyên vẹn. Đâu đó thỉnh thoảng đi qua phòng ktx, bạn sẽ bắt gặp cảnh ba bốn thằng chụm đầu lại giải một câu bất đẳng thức, tính dòng điện xoay chiều hay cân bằng phương trình hóa học. Hùng năng động và cập nhật xu thế nhất, bởi bạn thuộc một trong các admin của diễn đàn toán học – trang thông tin kiến thức cho các học sinh sắp thi đại học, cũng là nơi hỏi han trao đổi học hành – giải tỏa stress. 
-Những ngày đầu năm nhất, còn gọi là “Y muỗi”, chúng tôi vẫn dư giả về mặt thời gian. Ngoài việc học trên giảng đường, sinh viên về ktx đều ham mê tám chuyện, hóng drama khắp nơi mọi chốn
+Những ngày đầu năm nhất, còn gọi là “Y muỗi”, chúng tôi vẫn dư giả về mặt thời gian. Ngoài việc học trên giảng đường, sinh viên về ktx đều ham mê tám chuyện, hóng drama khắp nơi mọi chốn.
+
 -Này cậu, tôi thấy Hùng có vẻ đầy khí thế nhỉ? Cứ đêm về là ôm laptop giải đáp thắc mắc của các thành viên. Mà có phải diễn đàn toán học Việt Nam, trang thông tin chính thức hội toán của các lão làng hồi mình học chuyên không cậu?
+
 -Không. Gớm, cậu được cái nghĩ giỏi. Trang này chủ yếu liên quan cập nhật và giải đề luyện thi đại học thôi. Mà này, hôm thấy hắn kể có quen mấy em gái qua mạng luôn….Mà lại từ “diễn đàn toán học” mới ghê
+
 -Thật? Này cậu…tôi bảo
+
 -Gì? Cậu lại nghĩ ra trò mới à? Nói mau
+
 -Tôi đang dùng điện thoại Q-mobile…
+
 Điện thoại Q-mobile ngày đó luôn được quảng cáo với những câu tựa như “siêu Q, 2 sim 2 sóng online – siêu bền – siêu rẻ”. Tôi thuộc lớp con nhà nông, máy có gì tôi dùng triệt để: 1 sim viettel liên lạc, 1 sim vietnam mobile dùng lướt web. Trong tất cả các tính năng, tôi ưng nhất trò “thay đổi giọng nói”. Và ở câu chuyện của Hùng, tôi cùng Hoàng sử dụng giọng “nữ sinh ngọt ngào đất Hà Nội nghìn năm văn hiến” gọi điện cảm ơn “anh thanh niên dày công vì một tương lai ai cũng đậu đại học”.
+
 Tối đến, chỉ còn 3 đứa trong phòng. Hùng vẫn ngồi trên giường tầng 2 và cắm tai nghe kín mít, tôi với Còm ở giường tầng 1 đối diện. Rất trơ trẽn và liều lĩnh, chúng tôi bàn với nhau
+
 -Mình ra ngoài hay nó phải ra ngoài?
+
 -Tất nhiên là nó rồi, chúng ta số đông được quyền tự quyết, 2 người ở trong phòng nói cho mượt
+
 -Nhất trí, cậu liệu cái hồn, diễn cho ngọt nước, chứ lộ tẩy ra thì nhục đấy
+
 Sau khi thống nhất kịch bản, điện thoại đằng kia rung lên…
+
 -Alo, cho hỏi ai vậy ạ?
+
 -Dạ…em chào anh Hùng, em là Nga, em biết anh qua diễn đàn giải đề thi ấy anh
+
 Cuộc điện thoại cứ thế đưa đẩy, bên này dạ vâng thì bên kia đặt câu hỏi. Y như rằng tìm được niềm đam mê bất tận. Còm học chuyên toán nên chúng tôi sử dụng chủ đề toán học để lấp liếm sự giả trân, Hùng thấy em gái mê học hành nên cũng cứ thế tiếp chuyện và truyền tin liên tục. Mãi không dứt, 2 thằng quỷ đành chốt sổ bằng màn bẻ lái
+
 -Nói chuyện với anh mãi nãy giờ nhưng em muốn hẹn gặp anh một lần. Tại em nghe nói anh học Y Hà Nội, mà em giờ đang ở cổng trường ạ
+
 -Ôi vậy luôn á, anh ở ký túc xá này em
+
 -Nhưng chắc ktx trường anh phải rộng như trường nông nghiệp nhỉ? Em còn nhớ sang đó đợi bạn mà hơn 30 phút nó đi bộ chưa ra đến cửa, em đói muốn xỉu luôn
+
 -Không em, trường anh nhỏ lắm, chờ anh chút, anh ra liền nha
 Cái xong, thanh niên tháo headphone, mặc vội chiếc quần dài ngang gối, rồi nhảy phốc xuống sàn nhà
+
 -Ê, đi đâu mà gấp vậy mày? - Hoàng thảo mai quan tâm hỏi
+
 -Tao đi có chút việc, có đứa em đến chơi
+
 -Thế cần dọn phòng không? Chứ mang tiếng rằng anh em học Y ở bẩn, mai mốt tai tiếng phủ khắp thủ đô thì ngại lắm – tôi cũng mất nết không kém
+
 -Chắc không cần đâu anh em. Tao gặp em ở cổng rồi đi uống nước hoặc dẫn loanh quanh vài vòng trong trường cho vui, chả mấy khi. Nghe giọng Hà Nội ngọt lắm, cũng dễ thương đấy
+
 -Thế hả, vậy đi đi cho kịp, kẻo em nó chờ
+
 Thằng béo chạy vội ra khỏi cửa ktx, không quên mang theo điện thoại trên tay. Cửa phòng đóng lại cái rầm, hai thằng khốn nạn ở trong phòng 110 E2 trùm chăn cười điên đảo
+
 -Này cậu, tắt nguồn chưa, tắt mau không chút nó gọi
+
 -Ối, sợ gì. Nó gọi thì mình vẫn ở đây mà, khi đó còn gay cấn hơn ấy. Mà thôi, tha cho nó chứ trêu quá lại thương haha
 10, 20, rồi 30 phút sau thấy cu con lon ton đi về
+
 -Gì về nhanh thế? Không dẫn em nó vô đây mày?
+
 -Đâu, chả hiểu sao ra gọi thì không liên lạc được, tao chờ mãi không thấy em nó đâu. Lâu quá, tao vào luôn, chứ chờ vậy biết bao giờ nó tới…
 .
 .
 .
 .
 Bản tính mê gái của Hùng vẫn không lẫn vào đâu được. Lão này đứng đắn nhưng mỗi lần nói chuyện đều như mật rót vào tai, chưa kể nó còn đan xen triết lý nhân sinh cuộc sống vào thì ôi thôi, phải gọi là “em mơ về anh” của chị Mỹ Linh cũng xin thua sự mê tít tình yêu mang lại. Mùa hè đến, Thiết – Hùng – Đạt đưa nồi cơm điện từ nhà lên và bắt đầu chiến dịch “nấu cơm tiết kiệm tiền” - còn số tiền tiết kiệm để làm gì, chúng nó không nói. Bọn này bày đặt lắm, Thiết được phân là “mẹ”, Hùng là “bố” còn Đạt là “con”. Buổi cơm nào cũng ỉ ôi 
+
 -Nào cả nhà ăn cơm. Đạt con tí rửa bát nhé – cái giọng thé của con Thiết như thách thức cơn buồn ngủ của chúng tôi giữa 12 giờ nóng chảy mỡ
+
 Có lần ngứa tai quá, Hoàng chửi lên 
+
 -Xưa tao chơi đồ hàng cũng phân vai, giờ vô đây bọn mày 20 tuổi cả rồi làm tao nhớ quá. Ăn mau lên rồi im mồm cho tụi tao ngủ. Chiều còn lên giảng đường học lý thuyết, ngồi đó mà rả rích kể chuyện, mau lên, ăn rồi dọn, tắt đèn. 
 Các thanh niên tuổi đôi mươi ăn cơm ktx luôn kêu đói, chẳng biết do gạo đểu hay do dạ dày dãn nở nhiều nữa. Thường khi đến căn tin, Vượng hay bị cả quán trố mắt vì
+
 -Chị cho em cơm 7
+
 (Tức là nó ăn 7000đ tiền cơm, tầm 13000đ tiền thức ăn. Khoảnh khắc chị Minh bán cơm đắp lên dĩa một ú ụ cơm mà phát khiếp. Thường tụi con gái hay ăn cơm 2, con trai gầy gò ăn cơm 3, thằng nào béo kêu cơm 5. Vậy mà ông thần có lần gọi cơm 7. Choáng xỉu)
+
 Sinh viên nấu cơm chui một phần do đói, thứ nữa có thể “gian lận” thêm một vài món như: khoai hấp, trứng luộc, rồi sẵn nồi để làm mọi loại món nếu muốn. Cũng như mọi hôm, Thiết cắm cơm, Đạt rửa bát còn Hùng được giao đi mua đồ ăn ở quán cạnh con sông thối – quán cơm E5. Hơn 12 giờ, Đạt vẫn chơi điện tử, nằm lăn bên này bên kia trên chiếc giường gỗ. Thiết ngồi chống cằm, mở cuốn tiếng anh chuyên ngành ra đọc nhưng tôi dám cá đầu óc nó không thu nạp chữ nào do glucose không còn nhiều lên não. Bỗng nó đi qua chỗ tôi
+
 -Bạn Minh đang làm gì đó? Nhìn cậu nằm đắp chăn thích quá cơ. Nóng mà cậu cũng đắp chăn, tớ thương cậu nhất
+
 -Gì? Kệ tao. Lượn về ăn cơm rồi đi ngủ, nay tao mệt, không tiếp chuyện
+
 -Thức ăn đâu mà đớp, thằng Hùng đi mua đồ ăn 30 phút chưa về. Điện thoại thì không mang theo, nắng khô người mày bảo tao có nên đi tìm coi nó chết khô ở giữa đường giữa chợ không chứ? Điên hết cả người, lần sau tao cấm cho nó đi mua. Ở nhà cắm cơm hoặc mua đồ vặt, giao cho nó chắc bỏ xó chết đói quanh năm
+
 -Rồi sao? Mày có đi không?
+
 Vậy là Đạt tiếp tục phơi mình nõn nà trắng trẻo ở phòng, Thiết vốn đã đen như trời đêm đành khoác áo đi tìm trẻ lạc
+
 Tầm gần 13 giờ, tôi nghe tiếng chửi từ tầng 1, tiếng cười xuề xoà lẫn những câu khẩn khoản
+
 -Biết rồi, đừng nói nữa, tao quên
+
 Trưa đó, Hùng vẫn đi mua thực phẩm cho gia đình có 3 người yêu thương nhau, nhưng đáng tiếc ra đến gốc xà cừ trước quán Hapro, Hùng gặp X – cô gái má phính. Rồi hai người dừng chân nghỉ lại gốc cây, vẻ đẹp của người con gái nằm trong mắt của kẻ quên “vợ, con” mình đang đói nhăn răng ở nhà. Hùng ôm hộp nhựa trong tay, chưa mua được một món nào, và đằng xa là tiếng thét thấu trời xanh của con Thiết
+
 -Mày về phòng, bố mày cho mày chết thằng kiaaa
+
 -Ôi cậu ơi, tớ quên, tớ phải đi mua món mặn ở quán E5. Tớ đi đây, mải chuyện rồi quên mất
+
 Con Thiết hậm hực quay về, X không rõ chuyện gì xảy ra, còn tôi – tôi chỉ biết thời điểm 13 giờ, khi các bạn dậy rửa mặt, vệ sinh cá nhân, lên lớp học bài thì ba người vẫn đang hì hục bát đũa leng keng, và con Thiết
+
 -Thằng Hùng tao cấm đi chợ từ nay. Tao phạt 1 tuần rửa bát, miễn cho Đạt con nghỉ khoẻ
 .
 .
 .
 Nếu xét về sự đầu tư trui rèn kỹ năng mềm, phòng tôi 100% phiếu thuận bầu Hùng làm thủ lĩnh. Trong khi chúng tôi đang mải miết đèn sách và đâm đầu chạy theo lối mòn suy nghĩ “vào Y chỉ học Y”, nó đã nhanh tay lẹ chân đi tìm hiểu khắp Hà Nội về các lớp kỹ năng mềm và nhiều chương trình đại loại như rèn luyện trí thông minh, cân bằng giấc ngủ ngắn. Thế nhưng, nói đi rồi cũng phải kể lại, tụi tôi hay bảo nhau
+
 -Cái giống gì ở nước ngoài đẹp tươi, qua tay mấy ông đa cấp, về Việt Nam dễ bị biến tướng. Tôn chỉ và nội dung thì không sai, nhưng các lớp không đến nơi đến chốn, đưa con bỏ chợ, rồi bỗng một ngày chả thấy hiệu quả đâu mà chỉ thấy mấy quả tiền chất đống
+
 Cu cậu tham gia tầm chục khoá, mỗi lớp khoảng 2-3 triệu học phí ở mức tối thiểu. Sau mỗi khoá, nó được cấp chứng chỉ mang về trưng trên giá sách. Thiết là “vợ” của Hùng nên tự do lên giường Hùng đọc sách, mượn máy tính chơi game hoặc mân mê bất cứ đồ đạc gì nó thích
+
 -Minh ơi, sao thằng Hùng nhiều giấy chứng nhận vậy?
+
 -Đi học mấy lớp kỹ năng gì đó không rõ
+
 -Tao bảo rồi mà nó không nghe. Về sống trong phòng này thì mềm cứng gì đều giỏi lên hết, chả cần học. Gặp loại lắm mưu mô như mày, tiểu xảo như thằng Còm hoặc thánh thiện như tao, thì quá đủ để nhuần nhuyễn. Bày đặt mất tiền học mà tao có thấy nó nâng cao gì đâu
+
 Hùng đi học, về phòng thỉnh thoảng tự nói chuyện một mình để đối thoại bản thân. Nhưng có lẽ nhớ nhất vẫn là bài tập “rèn giấc ngủ ngắn” khiến tôi và Còm hoảng hốt. Sau này tôi biết đến đó là phương pháp pomodoro (học 25 phút, nghỉ 5 phút) nhưng bạn của chúng tôi lại biến tướng theo kiểu khác: học 1 tiếng, ngủ 15 phút. Kết cấu của giường ktx, một người bật đèn có ít nhất 5-6 thằng bị ánh sáng làm tỉnh giấc. Lão tướng có khi học giờ đêm, lúc lại chuyển giờ sáng và cứ bật – tắt – bật – tắt làm Thiết phải bò dậy nhiều lần đến tận giường gõ
+
 -Mày định làm thế đến bao giờ hả? Mày có thấy bọn tao trở người liên tục không? Học cái gì mà chưa kịp ngủ thì ngồi bật dậy học tiếp? Bộ mày muốn nhất khối hay định ôn nội trú từ giờ? Tắt đèn, đi ngủ mau, mai tao thay đổi luật lệ phòng thì đừng có kêu sao bị phạt ngầm mà không báo trước nhé.
+
 Thiết chửi, Hùng vẫn học nhưng tầm 1 tháng, bạn không chịu nổi do nhịp sinh học thay đổi tứ tung nên đành quay về giờ truyền thống: học liền mạch và đi ngủ. Kể vậy thôi chứ phòng tôi đều hiểu, xét về ham học hỏi và khao khát thay đổi bản thân theo lối đẽo cày giữa đường, chỉ một cái tên duy nhất hiện ra mồn một và in khắc, rõ từng đường nét lẫn âm thanh sống động
+
 -THIẾT !
 
 
