--- a/_posts/2021-06-27-ky-tuc-xa-110-e2.md
+++ b/_posts/2021-06-27-ky-tuc-xa-110-e2.md
@@ -4,7 +4,7 @@ title: Ký túc xá 110 E2
 subtitle: Giải phẫu những thằng dở trong phòng
 gh-repo: 
 cover-img: https://i1.wp.com/themiracleapples.com/wp-content/uploads/2021/04/study_cover.jpg
-thumbnail-img: /assets/img/coffee.jpg]
+thumbnail-img: /assets/img/coffee.jpg
 tags: [bvmd]
 comments: true
 ---
